<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/start_new"
            android:src="@mipmap/new_pic" />

        <ImageButton
            android:id="@+id/open_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/ouvrir"
            android:src="@mipmap/open_pic" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/brush"
            android:src="@mipmap/brush" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/erase"
            android:src="@mipmap/eraser" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/save"
            android:src="@mipmap/save"/>

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/save"
            android:src="@mipmap/share"/>

        <ImageButton
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/erase"
            android:src="@mipmap/retour_actif" />

        <ImageButton
            android:id="@+id/redo_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/save"
            android:src="@mipmap/aller_actif" />

        <ImageButton
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rotate"
            android:src="@mipmap/rotate" />

    </LinearLayout>


    <com.example.lucas.paint.DrawingViewPro
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF">
    </com.example.lucas.paint.DrawingViewPro>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/color_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:background="#FF0000FF"
            android:contentDescription="@string/paint"
            android:layout_gravity="center"
            android:tag="#FF0000FF"/>

        <ImageButton
            android:id="@+id/appareil_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appareil_photo"
            android:src="@mipmap/appareil_photo"/>

        <ImageButton
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shlick_camera"
            android:src="@mipmap/shlick_camera"/>

        <ImageButton
            android:id="@+id/switch_camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/switch_camera"
            android:src="@mipmap/switch_camera" />

    </LinearLayout>

</LinearLayout>
